{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 150,
  "lineage": "e2d6fb2b-1671-1605-96e8-120a6d27bb35",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-078f3330fe9bf226a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.26.23.0/27",
            "default_for_az": false,
            "id": "subnet-078f3330fe9bf226a",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0a746c8daad710a14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.26.23.32/27",
            "default_for_az": false,
            "id": "subnet-0a746c8daad710a14",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0107aec541c780368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.26.23.64/27",
            "default_for_az": false,
            "id": "subnet-0107aec541c780368",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0d9fe78d47ccbccf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.26.22.0/27",
            "default_for_az": false,
            "id": "subnet-0d9fe78d47ccbccf5",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-s26cb-public-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-00629feaedf764847",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.26.22.32/27",
            "default_for_az": false,
            "id": "subnet-00629feaedf764847",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-s26cb-public-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0f02c0d9c503de215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.26.22.64/27",
            "default_for_az": false,
            "id": "subnet-0f02c0d9c503de215",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-s26cb-public-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:vpc/vpc-065dbf9ecd667d358",
            "cidr_block": "10.26.22.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ff3e179502ffb0eb",
                "cidr_block": "10.26.22.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-084aba0114188d97e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-065dbf9ecd667d358",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04a098fbf72a0e72c",
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-s26cb-vpc",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            }
          },
          "depends_on": [
            "aws_vpc.new_vpc[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0caed2fb6233d3357",
            "public_dns": "ec2-3-24-204-53.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.24.204.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "q2-s26cb-eip-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f11957b96c3968f9",
            "public_dns": "ec2-52-65-117-36.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.65.117.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "q2-s26cb-eip-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bd6e839869a34c7d",
            "public_dns": "ec2-13-239-128-58.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.239.128.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "q2-s26cb-eip-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f00712fc7595ea69",
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:instance/i-072959d38e634eca6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "q2-s26cb-master-profile",
            "id": "i-072959d38e634eca6",
            "instance_state": "running",
            "instance_type": "r5.xlarge",
            "ipv6_address_count": 0,
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b125f68265f484fe"
              }
            ],
            "primary_network_interface_id": "eni-0b125f68265f484fe",
            "private_dns": "ip-10-26-23-7.ap-southeast-2.compute.internal",
            "private_ip": "10.26.23.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 360,
                "volume_id": "vol-0ad17cb55c5993863",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078f3330fe9bf226a",
            "tags": {
              "Name": "q2-s26cb-master-0",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "q2-s26cb-master-0-vol",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_security_group_ids": [
              "sg-01de889c3d6ab7346"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.master",
            "aws_network_interface.master"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f00712fc7595ea69",
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:instance/i-02fbb67f427dcf557",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "q2-s26cb-master-profile",
            "id": "i-02fbb67f427dcf557",
            "instance_state": "running",
            "instance_type": "r5.xlarge",
            "ipv6_address_count": 0,
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0cd20cfbcb9e7c9ef"
              }
            ],
            "primary_network_interface_id": "eni-0cd20cfbcb9e7c9ef",
            "private_dns": "ip-10-26-23-57.ap-southeast-2.compute.internal",
            "private_ip": "10.26.23.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 360,
                "volume_id": "vol-0e3769ce7552e4649",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a746c8daad710a14",
            "tags": {
              "Name": "q2-s26cb-master-1",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "q2-s26cb-master-1-vol",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_security_group_ids": [
              "sg-01de889c3d6ab7346"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.master",
            "aws_network_interface.master"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f00712fc7595ea69",
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:instance/i-07273d4960dce9720",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "q2-s26cb-master-profile",
            "id": "i-07273d4960dce9720",
            "instance_state": "running",
            "instance_type": "r5.xlarge",
            "ipv6_address_count": 0,
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-096c1fc8d59275852"
              }
            ],
            "primary_network_interface_id": "eni-096c1fc8d59275852",
            "private_dns": "ip-10-26-23-81.ap-southeast-2.compute.internal",
            "private_ip": "10.26.23.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 360,
                "volume_id": "vol-02667ad50ec66eb21",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0107aec541c780368",
            "tags": {
              "Name": "q2-s26cb-master-2",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "q2-s26cb-master-2-vol",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_security_group_ids": [
              "sg-01de889c3d6ab7346"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.master",
            "aws_network_interface.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-01953b15e0f96c434",
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-s26cb-igw",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-s26cb-ext/106a6484c357956b",
            "arn_suffix": "net/q2-s26cb-ext/106a6484c357956b",
            "dns_name": "q2-s26cb-ext-106a6484c357956b.elb.ap-southeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-s26cb-ext/106a6484c357956b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "q2-s26cb-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00629feaedf764847"
              },
              {
                "subnet_id": "subnet-0d9fe78d47ccbccf5"
              },
              {
                "subnet_id": "subnet-0f02c0d9c503de215"
              }
            ],
            "subnets": [
              "subnet-00629feaedf764847",
              "subnet-0d9fe78d47ccbccf5",
              "subnet-0f02c0d9c503de215"
            ],
            "tags": {
              "Name": "q2-s26cb-ext",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-065dbf9ecd667d358",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "data.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-s26cb-int/00fa134a7da13155",
            "arn_suffix": "net/q2-s26cb-int/00fa134a7da13155",
            "dns_name": "q2-s26cb-int-00fa134a7da13155.elb.ap-southeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-s26cb-int/00fa134a7da13155",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "q2-s26cb-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0107aec541c780368"
              },
              {
                "subnet_id": "subnet-078f3330fe9bf226a"
              },
              {
                "subnet_id": "subnet-0a746c8daad710a14"
              }
            ],
            "subnets": [
              "subnet-0107aec541c780368",
              "subnet-078f3330fe9bf226a",
              "subnet-0a746c8daad710a14"
            ],
            "tags": {
              "Name": "q2-s26cb-int",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-065dbf9ecd667d358",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-s26cb-ext/106a6484c357956b/d8619c46c6a60db7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-s26cb-ext/106a6484c357956b/d8619c46c6a60db7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-s26cb-ext/106a6484c357956b",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.api_external[0]",
            "aws_lb_target_group.api_external[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-s26cb-int/00fa134a7da13155/8ced8e71264c609a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-s26cb-int/00fa134a7da13155/8ced8e71264c609a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-s26cb-int/00fa134a7da13155",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.api_internal",
            "aws_lb_target_group.api_internal"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-s26cb-int/00fa134a7da13155/3f96ff85537631f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-s26cb-int/00fa134a7da13155/3f96ff85537631f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-s26cb-int/00fa134a7da13155",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.api_internal",
            "aws_lb_target_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695",
            "arn_suffix": "targetgroup/q2-s26cb-aext/45837fff5044e695",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695",
            "lambda_multi_value_headers_enabled": false,
            "name": "q2-s26cb-aext",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "q2-s26cb-aext",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146",
            "arn_suffix": "targetgroup/q2-s26cb-aint/fa0a4772c3d30146",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146",
            "lambda_multi_value_headers_enabled": false,
            "name": "q2-s26cb-aint",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "q2-s26cb-aint",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359",
            "arn_suffix": "targetgroup/q2-s26cb-sint/2f4c12da1fe6e359",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359",
            "lambda_multi_value_headers_enabled": false,
            "name": "q2-s26cb-sint",
            "port": 22623,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "q2-s26cb-sint",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146-2020050804431131660000000f",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146",
            "target_id": "10.26.23.7"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359-20200508044311353900000010",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359",
            "target_id": "10.26.23.7"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695-2020050804431101870000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695",
            "target_id": "10.26.23.7"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146-2020050804431101830000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146",
            "target_id": "10.26.23.57"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359-20200508044310931600000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359",
            "target_id": "10.26.23.57"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695-20200508044310936700000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695",
            "target_id": "10.26.23.57"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146-2020050804431120730000000e",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aint/fa0a4772c3d30146",
            "target_id": "10.26.23.81"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359-2020050804431098720000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-sint/2f4c12da1fe6e359",
            "target_id": "10.26.23.81"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695-2020050804431098760000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-s26cb-aext/45837fff5044e695",
            "target_id": "10.26.23.81"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09996f175116221d4",
            "original_route_table_id": "rtb-0837a274ce8cac43a",
            "route_table_id": "rtb-04a098fbf72a0e72c",
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "aws_route_table.default[0]",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0caed2fb6233d3357",
            "id": "nat-04cf269e0e6af995f",
            "network_interface_id": "eni-0db408e3a07ccf5ac",
            "private_ip": "10.26.22.13",
            "public_ip": "3.24.204.53",
            "subnet_id": "subnet-0d9fe78d47ccbccf5",
            "tags": {
              "Name": "q2-s26cb-nat-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            }
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f11957b96c3968f9",
            "id": "nat-0ed4d6b09c0cedcc1",
            "network_interface_id": "eni-0cb7b3f49608468a6",
            "private_ip": "10.26.22.57",
            "public_ip": "52.65.117.36",
            "subnet_id": "subnet-00629feaedf764847",
            "tags": {
              "Name": "q2-s26cb-nat-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            }
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd6e839869a34c7d",
            "id": "nat-0855b61aa8a8ab611",
            "network_interface_id": "eni-0fd0bab8eb7469abc",
            "private_ip": "10.26.22.83",
            "public_ip": "13.239.128.58",
            "subnet_id": "subnet-0f02c0d9c503de215",
            "tags": {
              "Name": "q2-s26cb-nat-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            }
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0b125f68265f484fe",
            "private_dns_name": "ip-10-26-23-7.ap-southeast-2.compute.internal",
            "private_ip": "10.26.23.7",
            "private_ips": [
              "10.26.23.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01de889c3d6ab7346"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078f3330fe9bf226a",
            "tags": {
              "Name": "q2-s26cb-master-0",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0cd20cfbcb9e7c9ef",
            "private_dns_name": "ip-10-26-23-57.ap-southeast-2.compute.internal",
            "private_ip": "10.26.23.57",
            "private_ips": [
              "10.26.23.57"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01de889c3d6ab7346"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a746c8daad710a14",
            "tags": {
              "Name": "q2-s26cb-master-1",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            }
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "eni-096c1fc8d59275852",
            "private_dns_name": "ip-10-26-23-81.ap-southeast-2.compute.internal",
            "private_ip": "10.26.23.81",
            "private_ips": [
              "10.26.23.81"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01de889c3d6ab7346"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0107aec541c780368",
            "tags": {
              "Name": "q2-s26cb-master-2",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01953b15e0f96c434",
            "id": "r-rtb-04a098fbf72a0e72c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a098fbf72a0e72c",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.igw[0]",
            "aws_route_table.default[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00ada5d9af9f5f2b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-04cf269e0e6af995f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00ada5d9af9f5f2b3",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_routes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0829b70b7e4bd3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0ed4d6b09c0cedcc1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0829b70b7e4bd3c",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_routes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-066625e678d5dd63a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0855b61aa8a8ab611",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066625e678d5dd63a",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_routes"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04a098fbf72a0e72c",
            "owner_id": "326767204872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "q2-s26cb-public",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00ada5d9af9f5f2b3",
            "owner_id": "326767204872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c0829b70b7e4bd3c",
            "owner_id": "326767204872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-066625e678d5dd63a",
            "owner_id": "326767204872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e48aac8e26f58cc",
            "route_table_id": "rtb-00ada5d9af9f5f2b3",
            "subnet_id": "subnet-078f3330fe9bf226a"
          },
          "depends_on": [
            "aws_route_table.private_routes",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7a8b2b56f1a114a",
            "route_table_id": "rtb-0c0829b70b7e4bd3c",
            "subnet_id": "subnet-0a746c8daad710a14"
          },
          "depends_on": [
            "aws_route_table.private_routes",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff31c686ee12e69b",
            "route_table_id": "rtb-066625e678d5dd63a",
            "subnet_id": "subnet-0107aec541c780368"
          },
          "depends_on": [
            "aws_route_table.private_routes",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058940355d130b4cb",
            "route_table_id": "rtb-04a098fbf72a0e72c",
            "subnet_id": "subnet-0d9fe78d47ccbccf5"
          },
          "depends_on": [
            "aws_route_table.default[0]",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a851012e312ab38c",
            "route_table_id": "rtb-04a098fbf72a0e72c",
            "subnet_id": "subnet-00629feaedf764847"
          },
          "depends_on": [
            "aws_route_table.default[0]",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0666c76af48909e33",
            "route_table_id": "rtb-04a098fbf72a0e72c",
            "subnet_id": "subnet-0f02c0d9c503de215"
          },
          "depends_on": [
            "aws_route_table.default[0]",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:security-group/sg-01de889c3d6ab7346",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01de889c3d6ab7346",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.26.22.0/23"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.26.22.0/23"
                ],
                "description": "",
                "from_port": 22623,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22623
              },
              {
                "cidr_blocks": [
                  "10.26.22.0/23"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.26.22.0/23"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 6081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 6642
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-05bf1eb939b351b09"
                ],
                "self": true,
                "to_port": 9999
              }
            ],
            "name": "terraform-20200508043733848300000003",
            "name_prefix": null,
            "owner_id": "326767204872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "q2-s26cb-master-sg",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:security-group/sg-05bf1eb939b351b09",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05bf1eb939b351b09",
            "ingress": [],
            "name": "terraform-20200508043733722300000002",
            "name_prefix": null,
            "owner_id": "326767204872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "q2-s26cb-worker-sg",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1923195112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-3706733278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-3579567376",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-1269986550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 6081,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.22.0/23"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-2674143576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.22.0/23"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-794896977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-768373830",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3005603232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-393903695",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2308167593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-2474246381",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-227780875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 10257,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-1408656494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-3441413512",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 10259,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-512012684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-2154633322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 10250,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-2503402393",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-199182975",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 6642,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-4251579397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1669357027",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1496733674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3353345548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.22.0/23"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-628565157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-1502850088",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-3346662862",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": "sg-05bf1eb939b351b09",
            "to_port": 4789,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.22.0/23"
            ],
            "description": null,
            "from_port": 22623,
            "id": "sgrule-2228823864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01de889c3d6ab7346",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-659132977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-1691093571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-4196770725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": "sg-01de889c3d6ab7346",
            "to_port": 6081,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.22.0/23"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-3170875887",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2623251221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-45222643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": "sg-01de889c3d6ab7346",
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2800593180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": "sg-01de889c3d6ab7346",
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-939786490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-2925670866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-814454836",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": "sg-01de889c3d6ab7346",
            "to_port": 10250,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1301247067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3546734013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": "sg-01de889c3d6ab7346",
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3922778036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2000256594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": "sg-01de889c3d6ab7346",
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.22.0/23"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2291437753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-3892607867",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-1995297437",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05bf1eb939b351b09",
            "self": false,
            "source_security_group_id": "sg-01de889c3d6ab7346",
            "to_port": 4789,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-078f3330fe9bf226a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.26.23.0/27",
            "id": "subnet-078f3330fe9bf226a",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0a746c8daad710a14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.26.23.32/27",
            "id": "subnet-0a746c8daad710a14",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0107aec541c780368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.26.23.64/27",
            "id": "subnet-0107aec541c780368",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-s26cb-private-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0d9fe78d47ccbccf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.26.22.0/27",
            "id": "subnet-0d9fe78d47ccbccf5",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-s26cb-public-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-00629feaedf764847",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.26.22.32/27",
            "id": "subnet-00629feaedf764847",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-s26cb-public-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0f02c0d9c503de215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.26.22.64/27",
            "id": "subnet-0f02c0d9c503de215",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-s26cb-public-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            },
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:vpc/vpc-065dbf9ecd667d358",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.26.22.0/23",
            "default_network_acl_id": "acl-077ce61a71da689f9",
            "default_route_table_id": "rtb-04a098fbf72a0e72c",
            "default_security_group_id": "sg-02d3d3102be06979f",
            "dhcp_options_id": "dopt-084aba0114188d97e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-065dbf9ecd667d358",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04a098fbf72a0e72c",
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-s26cb-vpc",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-s26cb": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.248.0/22",
              "52.95.128.0/21"
            ],
            "id": "vpce-05f7f6382849d3915",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "route_table_ids": [
              "rtb-00ada5d9af9f5f2b3",
              "rtb-04a098fbf72a0e72c",
              "rtb-066625e678d5dd63a",
              "rtb-0c0829b70b7e4bd3c"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-065dbf9ecd667d358"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_route_table.private_routes",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    }
  ]
}